--- a/css/rfd.css
+++ b/css/rfd.css
@@ -27,10 +27,20 @@
     justify-content: center;
     padding-top: 50px;
 }
-table, th, td {
+td {
     border: 1px solid;
+    padding: 15px;
+    text-align: center;
   }
 
   table{
+    border-collapse: collapse;
     width: auto;
   }
+ 
+  th {
+    border: none;   /* No border for header cells */
+    padding: 5px;
+    text-align: center;
+    font-size: 18px;
+}
