--- a/css/qrg.css
+++ b/css/qrg.css
@@ -92,7 +92,7 @@
     }
     
     .grid-button {
-        width: 120px;
+        width: 100%;
         height: 60px;
         border: 3px solid black;
         background-color: white;
@@ -101,6 +101,9 @@
         cursor: pointer;
         transition: all 0.3s ease-in-out;
         margin: 5px 0;
+        white-space: normal;          /* allow text to wrap to next line */
+        word-break: break-word;       /* if a word is too long, break it */
+        text-align: center;           /* center the text inside */
     }
     
     .grid-button:hover {
@@ -119,8 +122,23 @@
         justify-self: center;
         text-align: center;
     }
-    
-    
+
+    #column1 .grid-button{
+        background-color: aqua;
+    }
+
+    #column2 .grid-button{
+        background-color: magenta;
+    }
+
+    #column3 .grid-button{
+        background-color: red;
+    }
+
+    #column4 .grid-button{
+        background-color: green;
+    }
+
     
     
     
